Refactor HtmlTransformer to use URI instead of URL
- Replace URL-based methods with URI-based equivalents for better RFC compliance
- Add new getUrlFromTagAttribute(URI, ...) and addChildUrlFromTagAttribute(URI, ...) methods
- Deprecate old URL-based methods with @Deprecated annotation
- Use URI.resolve() for relative URL resolution instead of URL constructor
- Add log message guidelines to CLAUDE.md

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>